--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
+  <!-- Add `class="dark"` to the html tag to make dark mode the default -->
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover">
+  <!-- Change `data-theme` value to switch between custom and preset themes -->
+  <body data-sveltekit-preload-data="hover" data-theme="customTheme">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
