--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,8 @@
   </head>
   <!-- Change `data-theme` value to switch between custom and preset themes -->
   <body data-sveltekit-preload-data="hover" data-theme="customTheme">
-    <div style="display: contents">%sveltekit.body%</div>
+    <div style="display: contents" class="h-full overflow-hidden">
+      %sveltekit.body%
+    </div>
   </body>
 </html>
