--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="en">
   <!-- Add `class="dark"` to the html tag to make dark mode the default -->
   <head>
     <meta charset="utf-8" />
